redis/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: base-env
  labels:
    app: redis
spec:
  replicas: 1
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: registry.cn-shanghai.aliyuncs.com/twisted-fate/redis-master:5.0.7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /data
              name: redis-pv
      restartPolicy: Always
      volumes:
        - name: redis-pv
          persistentVolumeClaim:
            claimName: redis-pvc
  selector:
    matchLabels:
      app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: base-env
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      protocol: "TCP"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis
  namespace: base-env
spec:
  entryPoints:
    - redis
  routes:
    - match: HostSNI(`*`)
      kind: Rule
      services:
        - name: redis
          port: 6379
