redis/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis
  namespace: base-env
spec:
  entryPoints:
    - redis
  routes:
    - match: HostSNI(`*`)
      kind: Rule
      services:
        - name: redis
          port: 6379
